--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
+<meta name="google-site-verification" content="bPeyJ_S-8nWUQOJ-jHeV7UVtUrtM_aln4fud6O-cZHc" />
+<meta name="naver-site-verification" content="758e997c1e66267c6c2bc70c7b11fe473c4ecbad" />
   
     <title>중고차 보험, 이것 모르면 무조건 손해! 가장 유리한 자차보험 가입 전략은</title>
 
@@ -1311,3 +1311,4 @@
 
 </body>
 </html>
+
